--- a/index.html
+++ b/index.html
@@ -278,5 +278,5 @@
   <script src="js/custom.js"></script>
 
  <script src="//cdn.datatables.net/2.0.3/js/dataTables.min.js"></script>
-    <script src="http://localhost/webprojectPowder.ba/webPowder.ba/js/scripts.js"></script>
-     <script src="http://localhost/webprojectPowder.ba/webPowder.ba/js/utilis.js"></script>
+    <script src="http://localhost/Powder.ba/js/scripts.js"></script>
+     <script src="http://localhost/Powder.ba/js/utilis.js"></script>
