--- a/tmpl/login.html
+++ b/tmpl/login.html
@@ -11,7 +11,7 @@
 
     <link
       rel="stylesheet"
-      href="http://localhost/webprojectPowder.ba/webPowder.ba//css/registration.css"
+      href="http://localhost/Powder.ba//css/registration.css"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.20.0/dist/jquery.validate.min.js"></script>
@@ -99,7 +99,7 @@
       </body>
     </html>
 
-    <script src="http://localhost/webprojectPowder.ba/webPowder.ba/js/utilis.js"></script>
-    <script src="http://localhost/webprojectPowder.ba/webPowder.ba/js/scripts.js"></script>
+    <script src="http://localhost/Powder.ba/js/utilis.js"></script>
+    <script src="http://localhost/Powder.ba/js/scripts.js"></script>
   </body>
 </html>
