--- a/tmpl/users.html
+++ b/tmpl/users.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="http://localhost/webprojectPowder.ba/webPowder.ba/css/users.css"
-    />
+    <link rel="stylesheet" href="http://localhost/Powder.ba/css/users.css" />
     <link
       rel="stylesheet"
       href="https://cdn.datatables.net/2.0.3/css/dataTables.dataTables.css"
@@ -34,7 +31,7 @@
     </div>
   </body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="http://localhost/webprojectPowder.ba/webPowder.ba/js/scripts.js"></script>
-  <script src="http://localhost/webprojectPowder.ba/webPowder.ba/js/utilis.js"></script>
+  <script src="http://localhost/Powder.ba/js/scripts.js"></script>
+  <script src="http://localhost/Powder.ba/js/utilis.js"></script>
 </html>
-http://localhost/webprojectPowder.ba/webPowder.ba
+http://localhost/Powder.ba
