--- a/tmpl/admin.html
+++ b/tmpl/admin.html
@@ -22,7 +22,7 @@
 
     <script src="https://cdn.datatables.net/2.0.3/js/dataTables.js"></script>
     <link href="../css/admin.css" rel="stylesheet" />
-<link rel="stylesheet" href="http://localhost/webprojectPowder.ba/webPowder.ba/css/admin.css">  </head>
+<link rel="stylesheet" href="http://localhost/Powder.ba/css/admin.css">  </head>
   <body>
     <!-- Navigation-->
 
@@ -58,8 +58,8 @@
     Bootstrap core JS--
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     Core theme JS
-    <script src="http://localhost/webprojectPowder.ba/webPowder.ba/js/scripts.js"></script>
-            <script src="http://localhost/webprojectPowder.ba/webPowder.ba/js/utilis.js"></script>
+    <script src="http://localhost/Powder.ba/js/scripts.js"></script>
+            <script src="http://localhost/Powder.ba/js/utilis.js"></script>
 
   </body>
 </html>
