--- a/tmpl/checkout.html
+++ b/tmpl/checkout.html
@@ -154,8 +154,8 @@
         </div>
       </div>
     </section>
-    <script src="http://localhost/webprojectPowder.ba/webPowder.ba/js/scripts.js"></script>
-            <script src="http://localhost/webprojectPowder.ba/webPowder.ba/js/utilis.js"></script>
+    <script src="http://localhost/Powder.ba/js/scripts.js"></script>
+            <script src="http://localhost/Powder.ba/js/utilis.js"></script>
 
   </body>
 </html>
