--- a/tmpl/home.html
+++ b/tmpl/home.html
@@ -22,7 +22,7 @@
     <script src="https://cdn.datatables.net/2.0.3/js/dataTables.js"></script>
      <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.20.0/dist/jquery.validate.min.js"></script>
 
-    <link href="http://localhost/webprojectPowder.ba/webPowder.ba/css/stylesi.css" rel="stylesheet" />
+    <link href="http://localhost/Powder.ba/css/stylesi.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Navigation-->
@@ -59,8 +59,8 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="http://localhost/webprojectPowder.ba/webPowder.ba/js/scripts.js"></script>
-        <script src="http://localhost/webprojectPowder.ba/webPowder.ba/js/utilis.js"></script>
+    <script src="http://localhost/Powder.ba/js/scripts.js"></script>
+        <script src="http://localhost/Powder.ba/js/utilis.js"></script>
 
   </body>
 </html>
