--- a/tmpl/shopingcart.html
+++ b/tmpl/shopingcart.html
@@ -12,7 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.20.0/dist/jquery.validate.min.js"></script>
     <link
-      href="http://localhost/webprojectPowder.ba/webPowder.ba/css/shopingcart.css"
+      href="http://localhost/Powder.ba/css/shopingcart.css"
       rel="stylesheet"
     />
   </head>
@@ -103,6 +103,6 @@
     </section>
   </body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="http://localhost/webprojectPowder.ba/webPowder.ba/js/scripts.js"></script>
-  <script src="http://localhost/webprojectPowder.ba/webPowder.ba/js/utilis.js"></script>
+  <script src="http://localhost/Powder.ba/js/scripts.js"></script>
+  <script src="http://localhost/Powder.ba/js/utilis.js"></script>
 </html>
