--- a/tmpl/shopitem.html
+++ b/tmpl/shopitem.html
@@ -18,7 +18,7 @@
     />
 
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="http://localhost/webprojectPowder.ba/webPowder.ba/css/shopitem.css" rel="stylesheet" />
+    <link href="http://localhost/Powder.ba/css/shopitem.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.20.0/dist/jquery.validate.min.js"></script>
 
@@ -47,8 +47,8 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="http://localhost/webprojectPowder.ba/webPowder.ba/js/scripts.js"></script>
-            <script src="http://localhost/webprojectPowder.ba/webPowder.ba/js/utilis.js"></script>
+    <script src="http://localhost/Powder.ba/js/scripts.js"></script>
+            <script src="http://localhost/Powder.ba/js/utilis.js"></script>
 
   </body>
 </html>
