--- a/tmpl/registration.html
+++ b/tmpl/registration.html
@@ -11,7 +11,7 @@
 
     <link
       rel="stylesheet"
-      href="http://localhost/Powder.ba/css/registration.css"
+      href="http:/localhost/Powder.ba/css/registration.css"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.blockUI/2.70.0-2014.11.23/jquery.blockUI.min.js"></script>
